--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Todo App</title>
 </head>
 <body>
-  <div class="aaa">
+  <div class="header-container">
     <img src="./eisenhower-matrix.jpg" alt="matrix">
     <a class="more_inf" 
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+    <p id="top-section-for-adding-element-to-list">
       <label for="new-task">Add Item</label>
     </p>
     <div class="task-row-wrapper">
@@ -21,7 +21,7 @@
       <button>Add</button>
     </div>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <ul id="in-complete-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -33,7 +33,7 @@
           <img src="./remove.svg" alt="remove">
         </button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
