--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <a class="more_inf" 
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="top-section-for-adding-element-to-list">
+  <div class="centered-container">
+    <p id="top-section">
       <label for="new-task">Add Item</label>
     </p>
     <div class="task-row-wrapper">
@@ -21,7 +21,7 @@
       <button>Add</button>
     </div>
     <h3>Todo</h3>
-    <ul id="in-complete-tasks">
+    <ul id="complete">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
