feat : add BEM according to rule 2.1 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <section>
       <h3 class="name-chapter">Todo</h3>
       <ul class="current-task" id="complete">
-        <li class="li">
+        <li class="
+                    current-task__li">
           <input class="input" type="checkbox">
           <label class="task lable">Pay Bills</label>
           <input type="text" class="task input text">
@@ -34,7 +35,9 @@
             <img class="remove" src="./remove.svg" alt="remove">
           </button>
         </li>
-        <li class="edit-mode li">
+        <li class="
+                    current-task__li
+                    current-task__li_edit-mode">
           <input class="input" type="checkbox">
           <label class="task lable">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task input text">
@@ -48,7 +51,7 @@
     <section>
       <h3 class="name-chapter">Completed</h3>
       <ul class="complite-task" id="completed-tasks">
-        <li class="li">
+        <li class="complite-task__li">
           <input class="input" type="checkbox" checked>
           <label class="task lable">See the Doctor</label>
           <input type="text" class="task input text">
