--- a/index.html
+++ b/index.html
@@ -1,68 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
-  <link rel="stylesheet" href="style.css" media="screen" >
-  <title>Todo App</title>
-</head>
-<body class="page">
-  <header class="header-container">
-    <img src="./eisenhower-matrix.jpg" alt="matrix">
-    <a class="more-inf" 
-        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </header>
-  <main class="centered-container">
-    <section>
-      <p id="top-section">
-        <label class="for-new" for="new-task">Add Item</label>
-      </p>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task input new-task" type="text">
-        <button class="add">Add</button>
-      </div>
-    </section>
-    <section>
-      <h3 class="name-chapter">Todo</h3>
-      <ul class="current-task" id="complete">
-        <li class="
-                    current-task__li">
-          <input class="input" type="checkbox">
-          <label class="task lable">Pay Bills</label>
-          <input type="text" class="task input text">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img class="remove" src="./remove.svg" alt="remove">
-          </button>
-        </li>
-        <li class="
-                    current-task__li
-                    current-task__li_edit-mode">
-          <input class="input" type="checkbox">
-          <label class="task lable">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task input text">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img class="remove" src="./remove.svg" alt="remove">
-          </button>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h3 class="name-chapter">Completed</h3>
-      <ul class="complite-task" id="completed-tasks">
-        <li class="complite-task__li">
-          <input class="input" type="checkbox" checked>
-          <label class="task lable">See the Doctor</label>
-          <input type="text" class="task input text">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img class="remove" src="./remove.svg" alt="remove">
-          </button>
-        </li>
-      </ul>
-    </section>
-  </main>
-  <script src="app.js"></script>
-  </body>
+<html>
+<HEAD><title>Todo App</title>
+<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
+</HEAD>
+<body>
+<div class="aaa"><img src="./eisenhower-matrix.jpg"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a></div>
+<div class="centered-main-page-element"><p id='topSectionForAddingElementToList'><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id='new-task'class="task" type="text"><button>Add</button></div>
+</p><h3>Todo</h3>
+<ul id='incompleteTasks'>
+<li><input type='checkbox'><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
+<li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
+</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+</li>
+</ul>
+</div>
+<script type="text/javascript" SRC="app.js"></script>
+</body>
 </html>
